    Order host's by alias when fetching from the DB (#462)
    Remove profile name from deploy cloud-config as its no longer used
    Disable some spice channels to improve VM Terminal experience (#463)
    Open terminal when opening an instance view
    Restrict deployments by user project access (Admin can access all) (#466)
    Set host to offline if our client certificate has expired (#479)

Fixed
    First run doesn't toggle passwords properly (#390)
    Cant override users current project with HTTP header in "Universe"
    Cant create directory storage pool
    Cant use shells other than bash
    Instance names are sometimes invalid when deploying deployment (#379)
    Delete host (#365)
    Node holding onto client sockets that will be closed (#417)
    Image type icon in images sidebar on LXD 3 host
    Instance memory usage pop-overs overlap
    Server overview leaks all project names (#453)
    Offline host/s breaks background cron jobs (#362)

Removed
    Native centos support, could still use SNAP (#457)

API Changes
    Removed `memoryLimit` from CreateVirtualMachineController in favour of config param (#419)
    Image description when searching images now contains html, the plain description is now kept in the key origDescription
    projectGraphData became projectsUsageGraphData when fetching the general dashboard
    stats key was removed fetching the general dashboard
    Drop alias parameter from all controllers
    Add currentProject key when outputting host as JSON
    Don't load / return server "resources" key unless loading server overview
    Don't load / return clustersAndHosts when loading dashboard
    Don't load instances with GetHostOverview
    Load warnings & projectAnalytics with GetHostOverview
    Remove duplicate profiles key from CreateInstance service (internal)
    Remove profile name from deploy cloud-config as its no longer used

0.13.0 - 18/07/2020

Added
    Setting for storing timezone (#371)